# volttron-core

./: .pre-commit-config.yaml  README.md  data.config  pyproject.toml
.github/workflows/: deploy-pre-release.yml  downstream-update.yml  draft-new-release.yml  publish-new-release.yml
docs/source/: environments.rst
docs/source/diagrams/: authcurrent-rmq.puml  authcurrent.puml  authframework.puml  authsequence-base.puml  authsequence.puml  authservice.puml  common.puml  currentauth.puml  package.mermaid  package.puml  volttrontesting.mermaid  zmqauth.puml
src/volttron/: decorators.py  loader.py  resolver.py
src/volttron/client/: __init__.py  decorators.py  known_identities.py
src/volttron/client/commands/: connection.py  control.py
src/volttron/client/vip/: __init__.py
src/volttron/client/vip/agent/: __init__.py  connection.py  core.py  dispatch.py  utils.py
src/volttron/client/vip/agent/subsystems/: __init__.py  auth.py  hello.py  peerlist.py  ping.py  pubsub.py  rpc.py
src/volttron/server/: __init__.py  __main__.py  aip.py  containers.py  decorators.py  monitor.py  run_server.py  server_config.py  server_options.py  server_ui.py  serviceloader.py
src/volttron/services/config_store/: config_store_service.py
src/volttron/services/control/: control_service.py
src/volttron/services/health/: health_service.py
src/volttron/types/: __init__.py  agent_context.py  bases.py  client_context.py  connection_context.py  credentials.py  decorators.py  message.py  message_bus.py  parameter.py  protocols.py  server_config.py  server_options.py  service.py  singleton.py
src/volttron/types/auth/: __init__.py  auth_credentials.py  auth_service.py  authentication.py  authorization.py  credentials.py
src/volttron/utils/: __init__.py  commands.py  context.py  dynamic_helper.py  frame_serialization.py  jsonrpc.py  logs.py  time.py
tests/: conftest.py  wizardjson.py
tests/corefixtures/: dependency_setup.py  simplecoreandconnection.py
tests/fixtures/: __init__.py  volttron_home.py
tests/unit/: test_agent_context.py  test_aip.py  test_container.py  test_credential_auth_system.py  test_initialize_volttron_home.py  test_returns.py  test_serveroptions.py
tests/unit/agent/: test_core.py  test_create_agent.py
tests/unit/auth/: test_auth_logic.py  test_credentials.py
tests/unit/utils/: test_client_context.py  test_contexts.py  test_environment_vars.py  test_keystore.py
