[tool.poetry]
name = "volttron"
version = "11"
description = "VOLTTRON™ is an open source platform for distributed sensing and control. The platform provides services for collecting and storing data from buildings and devices and provides an environment for developing applications which interact with that data."
authors = ["volttron <volttron@pnnl.gov>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://volttron.org"
repository = "https://github.com/eclipse-volttron/volttron-core"
documentation = "https://volttron.readthedocs.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "volttron", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
gevent = "^22.10.2"
PyYAML = "^6.0"
toml = "^0.10.2"
dateutils = "^0.6.12"
tzlocal = "^4.3"
psutil = "^5.9.0"
cryptography = "^40.0.2"
watchdog-gevent = "^0.1.1"
pyzmq = "^25.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mock = "^5.0.2"
pre-commit = "^3.2.2"
yapf = "^0.33.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
volttron = 'volttron.server.__main__:main'
vcfg = 'volttron.client.commands.config:main'
volttron-cfg = 'volttron.client.commands.config:main'
vctl = 'volttron.client.commands.control:main'
volttron-ctl = 'volttron.client.commands.control:main'

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true
